src/snapshots/todoro__ui__tests__options_with_the_todoro_folder.snap
---
source: src/ui.rs
expression: "render_sized(&app, 70, 28).backend()"
---
"╭ Home ──────────── Monday, October 5 2026 (today) ──────────────────╮"
"│1.╭ Options ─────────────────────────────────────────────────────╮  │"
"│  │     not just a colour.                                       │  │"
"│  │ [ ] No colours                                               │  │"
"│  │     Draw everything in the terminal's own colours.           │  │"
"│  │     Highlights use reversed text.                            │  │"
"│  │                                                              │  │"
"│  │ Items                                                        │  │"
"│  │ [ ] Pin new items                                            │  │"
"│  │     New items start pinned, so they move on to today until   │  │"
"│  │     they're done. m unpins one.                              │  │"
"│  │ [ ] 12-hour clock                                            │  │"
"│  │     Show deadline times like 11PM instead of 23:00. You can  │  │"
"│  │     type either.                                             │  │"
"│  │                                                              │  │"
"│  │ Notes                                                        │  │"
"│  │ Notes editor: Built-in                                       │  │"
"│  │   A command to open notes files with, like nvim. Leave it    │  │"
"│  │   empty for todoro's own editor.                             │  │"
"│  │                                                              │  │"
"│  │ Data                                                         │  │"
"│  │ Todoro folder: ~/todoro                                      │  │"
"│  │   Where every workspace is kept. Enter to move them all to   │  │"
"│  │   another folder.                                            │  │"
"│  │   Move to:                                                   │  │"
"│  │   › ~/todoro                                                 │  │"
"╰──╰─────── j/k move · space toggle · / search · esc close ───────╯──╯"
" OPTIONS   j/k move  space toggle  / search  esc close                "
