src/snapshots/todoro__ui__tests__screens_at_30_columns.snap
---
source: src/ui.rs
expression: narrow_screens(30)
---
list
"╭─ Mon, Oct 5 2026 (today) ──╮"
"│1. Buy milk                 │"
"│2. Write the quarterly      │"
"│   report for the team ≡    │"
"│                            │"
"│                            │"
"│                            │"
"│                            │"
"│                            │"
"│                            │"
"╰──── h/l day · j/k move ────╯"
" NORMAL   a add  ? help       "

adding
"╭─ Mon, Oct 5 2026 (today) ──╮"
"│1. Buy milk                 │"
"│2.                          │"
"│3. Write the quarterly      │"
"│   report for the team ≡    │"
"│                            │"
"│                            │"
"│                            │"
"│                            │"
"│                            │"
"╰──── h/l day · j/k move ────╯"
" INSERT   enter/esc save      "

notes
"╭─ 2. Write the quarterly … ─╮"
"│  1 ## Q3                   │"
"│  2 - Ask for Q3 numbers    │"
"│  3 - [ ] Book a room       │"
"│                            │"
"│                            │"
"│                            │"
"│                            │"
"│                            │"
"│                            │"
"╰──── esc/q back to list ────╯"
" NORMAL   i/a/o insert  ? help"

help
"╭─ 2. Write the quarterly … ─╮"
"│ ╭ Keybindings ───────────╮ │"
"│ │ Search: key or word    │ │"
"│ │ ────────────────────── │ │"
"│ │ List                   │ │"
"│ │   h / l                │ │"
"│ │     Previous / next    │ │"
"│ │     day                │ │"
"│ │   t                    │ │"
"│ │     Go to today        │ │"
"╰─╰ ↑/↓ scroll · esc close ╯─╯"
" HELP   ↑/↓ scroll  esc close "

viewing notes
"╭─ 2. Write the quarterly … ─╮"
"│ Q3                         │"
"│ ──                         │"
"│                            │"
"│ • Ask for Q3 numbers       │"
"│ ☐ Book a room              │"
"│                            │"
"│                            │"
"│                            │"
"│                            │"
"╰───────── esc back ──── All ╯"
" VIEW   i edit  ? help        "

choosing a deadline
"╭ Deadline for Write the qu… ╮"
"│           October          │"
"│    Mo Tu We Th Fr Sa Su    │"
"│              1  2  3  4    │"
"│     5  6  7  8  9 10 11    │"
"│    12 13 14 15 16 17 18    │"
"│    19 20 21 22 23 24 25    │"
"│    26 27 28 29 30 31       │"
"│                            │"
"│                            │"
"╰ ↵ choose day · esc cancel ─╯"
" DEADLINE   ? help            "

a deadline's time
"╭ Deadline for Write the qu… ╮"
"│           October          │"
"│    Mo Tu We Th Fr Sa Su    │"
"│ ╭ Due Mon 5 Oct 2026 ────╮ │"
"│ │ › 17:30                │ │"
"│ │ A time, like 13:00 or  │ │"
"│ │ 1pm. Leave it empty    │ │"
"│ │ for the whole day.     │ │"
"│ ╰ enter save · esc back ─╯ │"
"│                            │"
"╰ ↵ choose day · esc cancel ─╯"
" DEADLINE   enter save        "

with a deadline
"╭─ Mon, Oct 5 2026 (today) ──╮"
"│1. Buy milk                 │"
"│2. Write the                │"
"│   quarterly                │"
"│   report for the           │"
"│   team ◷ 17:30 ≡           │"
"│                            │"
"│                            │"
"│                            │"
"│                            │"
"╰──── h/l day · j/k move ────╯"
" NORMAL   a add  ? help       "

empty day
"╭─ Tuesday, October 6 2026 ──╮"
"│  Nothing to do. Press a to │"
"│        add an item.        │"
"│                            │"
"│                            │"
"│                            │"
"│                            │"
"│                            │"
"│                            │"
"│                            │"
"╰──── h/l day · j/k move ────╯"
" NORMAL   a add  ? help       "
