src/snapshots/todoro__ui__tests__search_empty_and_no_matches.snap
---
source: src/ui.rs
expression: "format!(\"{empty}\\n{none}\")"
---
"╭────────────────── Monday, October 5 2026 (today) ──────────────────╮"
"│1╭ Search notes ──────────────────────────────────────────────────╮ │"
"│2│ Search: type to search inside every item's notes               │ │"
"│─│ ────────────────────────────────────────────────────────────── │─│"
"│✓│                                                                │ │"
"│ │                                                                │ │"
"╰─╰───────── ↑/↓ select · ↵ go to item · esc stop typing ──────────╯─╯"
" SEARCH   ↑/↓ select  ↵ go to item  esc stop typing                   "

"╭────────────────── Monday, October 5 2026 (today) ──────────────────╮"
"│1╭ Search notes ──────────────────────────────────────────────────╮ │"
"│2│ Search: zzz                                                    │ │"
"│─│ ────────────────────────────────────────────────────────────── │─│"
"│✓│ No notes match "zzz"                                           │ │"
"│ │                                                                │ │"
"╰─╰───────── ↑/↓ select · ↵ go to item · esc stop typing ──────────╯─╯"
" SEARCH   ↑/↓ select  ↵ go to item  esc stop typing                   "
