src/snapshots/todoro__ui__tests__search_including_notes.snap
---
source: src/ui.rs
expression: "render_sized(&app, 70, 14).backend()"
---
"╭────────────────── Monday, October 5 2026 (today) ──────────────────╮"
"│1╭ Search items and notes ────────────────────────────────────────╮ │"
"│2│ Search: dashboard                                              │ │"
"│─│ ────────────────────────────────────────────────────────────── │─│"
"│✓│ Today      Write the quarterly report for the team             │ │"
"│ │            ≡ Pull the charts from the dashboard                │ │"
"│ │ Wed 14 Oct Dashboard review with the team                      │ │"
"│ │                                                                │ │"
"│ │                                                                │ │"
"│ │                                                                │ │"
"│ │                                                                │ │"
"│ │                                                                │ │"
"╰─╰──────────── ↑/↓ select · ↵ go to item · esc close ─────────────╯─╯"
" SEARCH   ↑/↓ select  ↵ go to item  esc close                         "
