src/snapshots/todoro__ui__tests__search_moving_through_results_with_a_preview.snap
---
source: src/ui.rs
expression: terminal.backend()
---
"╭─────────────────────────────────────────── Monday, October 5 2026 (today) ───────────────────────────────────────────╮"
"│1╭ Search notes ────────────────────────────────────────────────────────────────────────────────────────────────────╮ │"
"│2│ Search: dash                                                                                                     │ │"
"│─│ ──────────────────────────────────────────────────────────────────────────────────────────────────────────────── │─│"
"│✓│ Today      Write the quarterly report for the team │ Write the quarterly report for the team                     │ │"
"│ │            ≡ Pull the charts from the dashboard    │ Today                                                       │ │"
"│ │                                                    │ ─────────────────────────────────────────────────────────── │ │"
"│ │                                                    │ Ask Sam for the Q3 numbers                                  │ │"
"│ │                                                    │ Pull the charts from the dashboard                          │ │"
"│ │                                                    │                                                             │ │"
"│ │                                                    │                                                             │ │"
"│ │                                                    │                                                             │ │"
"│ │                                                    │                                                             │ │"
"│ │                                                    │                                                             │ │"
"│ │                                                    │                                                             │ │"
"│ │                                                    │                                                             │ │"
"│ │                                                    │                                                             │ │"
"│ │                                                    │                                                             │ │"
"╰─╰───────────────────── j/k select · ↵ go to item · i type · ctrl+d/u scroll notes · esc close ─────────────────────╯─╯"
" SEARCH   j/k select  ↵ go to item  i type  esc close                                                                   "
