src/snapshots/todoro__ui__tests__search_narrow.snap
---
source: src/ui.rs
expression: "render_sized(&app, 30, 14).backend()"
---
"╭─ Mon, Oct 5 2026 (today) ──╮"
"│1╭ Search notes ──────────╮ │"
"│2│ Search: dashboard      │ │"
"│ │ ────────────────────── │ │"
"│─│ Today                  │─│"
"│✓│ Write the quarterly r… │ │"
"│ │ ≡ …m the dashboard     │ │"
"│ │                        │ │"
"│ │                        │ │"
"│ │                        │ │"
"│ │                        │ │"
"│ │                        │ │"
"╰─╰ ↵ go · esc stop typing ╯─╯"
" SEARCH   esc stop typing     "
