src/snapshots/todoro__ui__tests__search_with_a_preview_of_the_notes.snap
---
source: src/ui.rs
expression: "render_sized(&app, 120, 20).backend()"
---
"╭─────────────────────────────────────────── Monday, October 5 2026 (today) ───────────────────────────────────────────╮"
"│1╭ Search notes ────────────────────────────────────────────────────────────────────────────────────────────────────╮ │"
"│2│ Search: a                                                                                                        │ │"
"│─│ ──────────────────────────────────────────────────────────────────────────────────────────────────────────────── │─│"
"│✓│ Today      Write the quarterly report for the team │ Write the quarterly report for the team                     │ │"
"│ │            ≡ Ask Sam for the Q3 numbers            │ Today                                                       │ │"
"│ │ Today      Buy milk                                │ ─────────────────────────────────────────────────────────── │ │"
"│ │            ≡ - [ ] oat milk                        │ Ask Sam for the Q3 numbers                                  │ │"
"│ │                                                    │ Pull the charts from the dashboard                          │ │"
"│ │                                                    │                                                             │ │"
"│ │                                                    │                                                             │ │"
"│ │                                                    │                                                             │ │"
"│ │                                                    │                                                             │ │"
"│ │                                                    │                                                             │ │"
"│ │                                                    │                                                             │ │"
"│ │                                                    │                                                             │ │"
"│ │                                                    │                                                             │ │"
"│ │                                                    │                                                             │ │"
"╰─╰────────────────────────────────── ↑/↓ select · ↵ go to item · esc stop typing ───────────────────────────────────╯─╯"
" SEARCH   ↑/↓ select  ↵ go to item  esc stop typing                                                                     "
