src/snapshots/todoro__ui__tests__searching_notes.snap
---
source: src/ui.rs
expression: "render_sized(&app, 70, 14).backend()"
---
"╭────────────────── Monday, October 5 2026 (today) ──────────────────╮"
"│1╭ Search notes ──────────────────────────────────────────────────╮ │"
"│2│ Search: dashboard                                              │ │"
"│─│ ────────────────────────────────────────────────────────────── │─│"
"│✓│ Today      Write the quarterly report for the team             │ │"
"│ │            ≡ Pull the charts from the dashboard                │ │"
"│ │                                                                │ │"
"│ │                                                                │ │"
"│ │                                                                │ │"
"│ │                                                                │ │"
"│ │                                                                │ │"
"│ │                                                                │ │"
"╰─╰───────── ↑/↓ select · ↵ go to item · esc stop typing ──────────╯─╯"
" SEARCH   ↑/↓ select  ↵ go to item  esc stop typing                   "
